trabalhando no console

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
                 <div class="address"></div>
             -->
             <textarea class="input" id="input" placeholder="code here..."></textarea>
-            <!-- <div class="output" id="output">
+            <div class="output" id="output">
                 
-            </div> -->
+            </div>
         </div>
         <div class="options">
             <button type="submit" class="mount">Montar</button>
