alterando disposição da interface após montagem

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <Section class="screen">
-        <div class="address"></div>
-
-        <textarea class="input" id="input" placeholder="code here..."></textarea>
+        <div class="code-area">
+            <div class="address"></div>
+    
+            <textarea class="input" id="input" placeholder="code here..."></textarea>
+        </div>
 
         <div class="sys">
             <div class="registers">
